org.kuse.payloadbuilder.core/target/generated-sources/antlr4/org/kuse/payloadbuilder/core/parser/PayloadBuilderQueryParser.java
// Generated from org\kuse\payloadbuilder\core\parser\PayloadBuilderQuery.g4 by ANTLR 4.7.1
package org.kuse.payloadbuilder.core.parser;

//CSOFF
//@formatter:off

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PayloadBuilderQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, AND=11, ARRAY=12, AS=13, ASC=14, APPLY=15, CROSS=16, DESC=17, 
		DESCRIBE=18, ELSE=19, END=20, FALSE=21, FIRST=22, FROM=23, GROUPBY=24, 
		HAVING=25, IF=26, IN=27, INNER=28, IS=29, JOIN=30, LAST=31, LEFT=32, NOT=33, 
		NULL=34, NULLS=35, OBJECT=36, ON=37, OR=38, ORDERBY=39, OUTER=40, PARAMETERS=41, 
		PRINT=42, SELECT=43, SESSION=44, SET=45, SHOW=46, THEN=47, TRUE=48, USE=49, 
		VARIABLES=50, WITH=51, WHERE=52, ASTERISK=53, COLON=54, EQUALS=55, EXCLAMATION=56, 
		GREATERTHAN=57, GREATERTHANEQUAL=58, LESSTHAN=59, LESSTHANEQUAL=60, MINUS=61, 
		NOTEQUALS=62, PERCENT=63, PLUS=64, SLASH=65, NUMBER=66, DECIMAL=67, STRING=68, 
		IDENTIFIER=69, QUOTED_IDENTIFIER=70, LINE_COMMENT=71, BLOCK_COMMENT=72, 
		SPACE=73;
	public static final int
		RULE_query = 0, RULE_statements = 1, RULE_statement = 2, RULE_miscStatement = 3, 
		RULE_setStatement = 4, RULE_useStatement = 5, RULE_describeStatement = 6, 
		RULE_showStatement = 7, RULE_controlFlowStatement = 8, RULE_ifStatement = 9, 
		RULE_printStatement = 10, RULE_dmlStatement = 11, RULE_topSelect = 12, 
		RULE_selectStatement = 13, RULE_selectItem = 14, RULE_nestedSelectItem = 15, 
		RULE_tableSourceJoined = 16, RULE_tableSource = 17, RULE_tableSourceOptions = 18, 
		RULE_tableSourceOption = 19, RULE_tableName = 20, RULE_joinPart = 21, 
		RULE_populateQuery = 22, RULE_sortItem = 23, RULE_topExpression = 24, 
		RULE_expression = 25, RULE_primary = 26, RULE_functionCall = 27, RULE_functionName = 28, 
		RULE_literal = 29, RULE_variable = 30, RULE_namedParameter = 31, RULE_compareOperator = 32, 
		RULE_qname = 33, RULE_identifier = 34, RULE_numericLiteral = 35, RULE_decimalLiteral = 36, 
		RULE_stringLiteral = 37, RULE_booleanLiteral = 38, RULE_nonReserved = 39;
	public static final String[] ruleNames = {
		"query", "statements", "statement", "miscStatement", "setStatement", "useStatement", 
		"describeStatement", "showStatement", "controlFlowStatement", "ifStatement", 
		"printStatement", "dmlStatement", "topSelect", "selectStatement", "selectItem", 
		"nestedSelectItem", "tableSourceJoined", "tableSource", "tableSourceOptions", 
		"tableSourceOption", "tableName", "joinPart", "populateQuery", "sortItem", 
		"topExpression", "expression", "primary", "functionCall", "functionName", 
		"literal", "variable", "namedParameter", "compareOperator", "qname", "identifier", 
		"numericLiteral", "decimalLiteral", "stringLiteral", "booleanLiteral", 
		"nonReserved"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "')'", "','", "'.'", "'#'", "'['", "']'", "'->'", 
		"'@'", null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'*'", "':'", "'='", "'!'", 
		"'>'", "'>='", "'<'", "'<='", "'-'", "'!='", "'%'", "'+'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, "AND", 
		"ARRAY", "AS", "ASC", "APPLY", "CROSS", "DESC", "DESCRIBE", "ELSE", "END", 
		"FALSE", "FIRST", "FROM", "GROUPBY", "HAVING", "IF", "IN", "INNER", "IS", 
		"JOIN", "LAST", "LEFT", "NOT", "NULL", "NULLS", "OBJECT", "ON", "OR", 
		"ORDERBY", "OUTER", "PARAMETERS", "PRINT", "SELECT", "SESSION", "SET", 
		"SHOW", "THEN", "TRUE", "USE", "VARIABLES", "WITH", "WHERE", "ASTERISK", 
		"COLON", "EQUALS", "EXCLAMATION", "GREATERTHAN", "GREATERTHANEQUAL", "LESSTHAN", 
		"LESSTHANEQUAL", "MINUS", "NOTEQUALS", "PERCENT", "PLUS", "SLASH", "NUMBER", 
		"DECIMAL", "STRING", "IDENTIFIER", "QUOTED_IDENTIFIER", "LINE_COMMENT", 
		"BLOCK_COMMENT", "SPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PayloadBuilderQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PayloadBuilderQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PayloadBuilderQueryParser.EOF, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			statements();
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				statement();
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__0) {
					{
					setState(84);
					match(T__0);
					}
				}

				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DESCRIBE) | (1L << IF) | (1L << PRINT) | (1L << SELECT) | (1L << SET) | (1L << SHOW) | (1L << USE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public MiscStatementContext miscStatement() {
			return getRuleContext(MiscStatementContext.class,0);
		}
		public ControlFlowStatementContext controlFlowStatement() {
			return getRuleContext(ControlFlowStatementContext.class,0);
		}
		public DmlStatementContext dmlStatement() {
			return getRuleContext(DmlStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DESCRIBE:
			case SET:
			case SHOW:
			case USE:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				miscStatement();
				}
				break;
			case IF:
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				controlFlowStatement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(93);
				dmlStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MiscStatementContext extends ParserRuleContext {
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public UseStatementContext useStatement() {
			return getRuleContext(UseStatementContext.class,0);
		}
		public DescribeStatementContext describeStatement() {
			return getRuleContext(DescribeStatementContext.class,0);
		}
		public ShowStatementContext showStatement() {
			return getRuleContext(ShowStatementContext.class,0);
		}
		public MiscStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_miscStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitMiscStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MiscStatementContext miscStatement() throws RecognitionException {
		MiscStatementContext _localctx = new MiscStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_miscStatement);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				setStatement();
				}
				break;
			case USE:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				useStatement();
				}
				break;
			case DESCRIBE:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				describeStatement();
				}
				break;
			case SHOW:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				showStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetStatementContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(PayloadBuilderQueryParser.SET, 0); }
		public QnameContext qname() {
			return getRuleContext(QnameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(PayloadBuilderQueryParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitSetStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetStatementContext setStatement() throws RecognitionException {
		SetStatementContext _localctx = new SetStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_setStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(SET);
			setState(103);
			qname();
			setState(104);
			match(EQUALS);
			setState(105);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseStatementContext extends ParserRuleContext {
		public TerminalNode USE() { return getToken(PayloadBuilderQueryParser.USE, 0); }
		public QnameContext qname() {
			return getRuleContext(QnameContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(PayloadBuilderQueryParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public UseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitUseStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UseStatementContext useStatement() throws RecognitionException {
		UseStatementContext _localctx = new UseStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_useStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(USE);
			setState(108);
			qname();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(109);
				match(EQUALS);
				setState(110);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescribeStatementContext extends ParserRuleContext {
		public TerminalNode DESCRIBE() { return getToken(PayloadBuilderQueryParser.DESCRIBE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public DescribeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_describeStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitDescribeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescribeStatementContext describeStatement() throws RecognitionException {
		DescribeStatementContext _localctx = new DescribeStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_describeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(DESCRIBE);
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(114);
				tableName();
				}
				break;
			case 2:
				{
				setState(115);
				functionName();
				setState(116);
				match(T__1);
				setState(117);
				match(T__2);
				}
				break;
			case 3:
				{
				setState(119);
				selectStatement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ShowStatementContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(PayloadBuilderQueryParser.SHOW, 0); }
		public TerminalNode VARIABLES() { return getToken(PayloadBuilderQueryParser.VARIABLES, 0); }
		public TerminalNode PARAMETERS() { return getToken(PayloadBuilderQueryParser.PARAMETERS, 0); }
		public ShowStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_showStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitShowStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShowStatementContext showStatement() throws RecognitionException {
		ShowStatementContext _localctx = new ShowStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_showStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(SHOW);
			setState(123);
			_la = _input.LA(1);
			if ( !(_la==PARAMETERS || _la==VARIABLES) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlFlowStatementContext extends ParserRuleContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public ControlFlowStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlFlowStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitControlFlowStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlFlowStatementContext controlFlowStatement() throws RecognitionException {
		ControlFlowStatementContext _localctx = new ControlFlowStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_controlFlowStatement);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				ifStatement();
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				printStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ExpressionContext condition;
		public StatementsContext statements;
		public List<StatementsContext> elseStatements = new ArrayList<StatementsContext>();
		public List<TerminalNode> IF() { return getTokens(PayloadBuilderQueryParser.IF); }
		public TerminalNode IF(int i) {
			return getToken(PayloadBuilderQueryParser.IF, i);
		}
		public TerminalNode THEN() { return getToken(PayloadBuilderQueryParser.THEN, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public TerminalNode END() { return getToken(PayloadBuilderQueryParser.END, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(PayloadBuilderQueryParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ifStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(IF);
			setState(130);
			((IfStatementContext)_localctx).condition = expression(0);
			setState(131);
			match(THEN);
			setState(132);
			statements();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(133);
				match(ELSE);
				setState(134);
				((IfStatementContext)_localctx).statements = statements();
				((IfStatementContext)_localctx).elseStatements.add(((IfStatementContext)_localctx).statements);
				}
			}

			setState(137);
			match(END);
			setState(138);
			match(IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(PayloadBuilderQueryParser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PayloadBuilderQueryVisitor ) return ((PayloadBuilderQueryVisitor<? extends T>)visitor).visitPrintStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_printStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(PRINT);
			setState(141);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DmlStatementContext extends ParserRuleContext {
		public SelectStatementContext selectStatement() {
			return getRuleContext(SelectStatementContext.class,0);
		}
		public DmlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dmlStatement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
